Alteração da imagem de background e reajustes na responsividade da primeira tela

--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -5,11 +5,15 @@
     border: 0;
 }
 
-html,
+.root {
+    height: 100vh;
+}
+
+/* html,
 body {
     height: 100%;
     width: 100%;
-}
+} */
 
 body {
     font-family: var(--default-font);
