--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,7 +33,7 @@
 
 .menu-list {
     background-color: var(--default-transparent-header-color);
-    height: 100%;
+    height: 86%;
     border-top: 0.1rem solid var(--default-footer-font-color);
     border-bottom: 0.1rem solid var(--default-footer-font-color);
     margin-top: 4.04rem;
@@ -48,9 +48,9 @@
 /* CONTEÚDO PRINCIAL */
 body::before {
     content: " ";
-    background-image: url(../styles/img/background-initial.png);
+    background-image: url(../styles/img/background-img.jpg);
     background-size: cover;
-    height: 115%;
+    height: 100%;
     top: 0;
     right: 0;
     bottom: 0;
@@ -63,7 +63,7 @@ body::before {
 .main-content {
     color: var(--default-primary-font-color);
     text-shadow: 0.125rem 0.125rem 0.125rem rgb(0 0 0 / 100%);
-    height: 100%;
+    height: 86%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -71,19 +71,19 @@ body::before {
 }
 
 .main-welcome h1 {
-    font-size: 2.3rem;
+    font-size: 1.5rem;
+    margin: 2.5rem 2.5rem 1.5rem 2.5rem;
     line-height: 2.5rem;
-    margin: 2.5rem;
 }
 
 .main-welcome h3 {
-    font-size: 1.05rem;
-    padding: 1rem;
+    font-size: 1rem;
+    margin: 0 1rem 0 1rem;
 }
 
 .logo img {
-    height: 9rem;
-    margin-top: 2.5rem;
+    height: 6rem;
+    margin-top: 2rem;
 }
 
 .button-initial button {
@@ -91,7 +91,6 @@ body::before {
     background-color: var(--default-secondary-font-color);
     height: 2.3rem;
     width: 8.375rem;
-    margin-top: 1rem;
     border-radius: 3.125rem;
     box-shadow: 3px 3px 3px black;
 }
@@ -112,9 +111,10 @@ body::before {
 
 /* ESTILIZAÇÃO DO FOOTER */
 .footer-navigation {
-    font-size: 1rem;
+    font-size: 0.8rem;
     background-color: var(--default-header-footer-color);
     height: 6.2rem;
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -122,7 +122,7 @@ body::before {
 
 .footer-links {
     display: grid;
-    line-height: 1.3rem;
+    line-height: 1rem;
 }
 
 .footer-links a {
@@ -134,54 +134,72 @@ body::before {
     color: var(--default-yellow);
 }
 
+.footer-buttonsDownload {
+    display: grid;
+}
+
 .footer-buttonsDownload button {
     background-color: var(--default-header-footer-color);
-    margin-right: 1.5rem;
 }
 
 .footer-buttonsDownload button img {
-    height: 2.5rem;
+    height: 2rem;
 }
 
 .footer-githubLink a img {
-    height: 3rem;
+    height: 2.5rem;
 }
 
-@media screen and (max-width: 740px) {
-    /* CONTEÚDO PRINCIAL */
-    .main-welcome h1 {
-        font-size: 2rem;
-    }
+@media screen and (min-width: 600px) {
     .logo img {
-        height: 7rem;
-        margin-top: 2rem;
+        height: 8rem;
     }
-}
 
-@media screen and (max-width: 560px) {
-    /* CONTEÚDO PRINCIAL */
-    .main-welcome h1 {
-        font-size: 1.5rem;
-    }
-    .logo img {
-        height: 6rem;
-        margin-top: 1rem;
-    }
-    /* ESTILIZAÇÃO DO FOOTER */
     .footer-navigation {
-        font-size: 0.7rem;
+        font-size: 0.9rem;
     }
     .footer-links {
-        line-height: 1rem;
+        line-height: 1.3rem;
     }
-    .footer-buttonsDownload button img {
-        height: 2rem;
-    }
-    .footer-buttonsDownload button {
-        margin-right: 0;
+    .footer-buttonsDownload {
         display: flex;
     }
-    .footer-githubLink a img {
+    .footer-buttonsDownload button img {
         height: 2.5rem;
+    }
+    .footer-githubLink a img {
+        height: 3rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .menu-list {
+        height: 98%;
+    }
+    body::before {
+        height: 110%;
+    }
+    .main-content {
+        height: 98%;
+    }
+
+    .main-welcome h1 {
+        font-size: 2rem;
+        margin: 5rem 2.5rem 1.5rem 2.5rem;
+    }
+    .main-welcome h3 {
+        font-size: 1.19rem;
+        margin: 2rem 1rem 1rem 1rem;
+    }
+    .logo img {
+        height: 10rem;
+        margin-top: 2rem;
+    }
+
+    .footer-navigation {
+        font-size: 1rem;
+    }
+    .footer-buttonsDownload button {
+        margin: 1rem;
     }
 }
