--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,46 +11,11 @@
     --default-button-hover-color: #050d1f;
 }
 
-/* ESTILIZAÇÃO DA LISTA DO MENU */
-.menu-item {
-    list-style: none;
-    padding: 0.938rem 0.625rem 0.938rem 80rem;
-}
-
-.menu-item:nth-child(1) a {
-    padding: 0.938rem 0 0.938rem 8rem;
-}
-
-.nav-bar a {
-    text-decoration: none;
-    font-size: 1.1rem;
-    color: var(--default-primary-font-color);
-}
-
-.nav-bar a:hover {
-    color: var(--default-yellow);
-}
-
-.menu-list {
-    background-color: var(--default-transparent-header-color);
-    height: 86%;
-    border-top: 0.1rem solid var(--default-footer-font-color);
-    border-bottom: 0.1rem solid var(--default-footer-font-color);
-    margin-top: 4.04rem;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: absolute;
-    z-index: 1;
-}
-
 /* CONTEÚDO PRINCIAL */
 body::before {
     content: " ";
     background-image: url(../styles/img/background-img.jpg);
     background-size: cover;
-    height: 100%;
     top: 0;
     right: 0;
     bottom: 0;
@@ -63,16 +28,17 @@ body::before {
 .main-content {
     color: var(--default-primary-font-color);
     text-shadow: 0.125rem 0.125rem 0.125rem rgb(0 0 0 / 100%);
-    height: 86%;
+    height: 80%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     text-align: center;
     position: relative;
 }
 
 .main-welcome h1 {
     font-size: 1.5rem;
-    margin: 2.5rem 2.5rem 1.5rem 2.5rem;
+    margin: -2rem 2.5rem 1.5rem 2.5rem;
     line-height: 2.5rem;
 }
 
@@ -165,7 +131,7 @@ body::before {
         display: flex;
     }
     .footer-buttonsDownload button img {
-        height: 2.5rem;
+        height: 2.2rem;
     }
     .footer-githubLink a img {
         height: 3rem;
@@ -173,19 +139,15 @@ body::before {
 }
 
 @media screen and (min-width: 1024px) {
-    .menu-list {
-        height: 98%;
-    }
     body::before {
-        height: 110%;
+        height: 112vh;
     }
     .main-content {
-        height: 98%;
+        height: 100%;
     }
 
     .main-welcome h1 {
         font-size: 2rem;
-        margin: 5rem 2.5rem 1.5rem 2.5rem;
     }
     .main-welcome h3 {
         font-size: 1.19rem;
@@ -193,7 +155,6 @@ body::before {
     }
     .logo img {
         height: 10rem;
-        margin-top: 2rem;
     }
 
     .footer-navigation {
@@ -201,5 +162,8 @@ body::before {
     }
     .footer-buttonsDownload button {
         margin: 1rem;
+    }
+    .footer-buttonsDownload button img {
+        height: 2.5rem;
     }
 }
