--- a/src/styles/cardspage.css
+++ b/src/styles/cardspage.css
@@ -66,7 +66,7 @@ header {
 }
 
 /* ESTILIZAÇÃO DO BACKGROUND */
-body::before {
+/* body::before {
     height: 100%;
     content: " ";
     background-image: url(../styles/img/background_sky.jpeg);
@@ -78,7 +78,7 @@ body::before {
     opacity: 0.5;
     position: fixed;
     z-index: -1;
-}
+} */
 
 /* BARRA DO CÁLCULO AGREGADO */
 .calculation-print {
@@ -122,11 +122,11 @@ body::before {
     display: grid;
 }
 
-.front-cards {
+/* .front-cards {
     background-color: var(--default-yellow);
     align-content: space-between;
     text-align: center;
-}
+} */
 
 .numberPokemon {
     font-size: 12px;
@@ -193,7 +193,7 @@ body::before {
 }
 
 /* ESTILIZAÇÃO VERSÃO SHINY */
-/* body::before {
+body::before {
     height: 100%;
     content: " ";
     background-image: url(../styles/img/background-shiny.jpg);
@@ -210,7 +210,7 @@ body::before {
     background-color: #c79d33;
     align-content: space-between;
     text-align: center;
-} */
+}
 
 @media screen and (min-width: 500px) {
     .pokemonList {
