Retirada da decoração das tags <a> no footer

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -94,7 +94,7 @@ body::before {
 }
 
 .footer-navigation a {
-    text-decoration: underline;
+    text-decoration: none;
     color: var(--default-footer-font-color);
 }
 
