--- a/styles/shared.css
+++ b/styles/shared.css
@@ -7,6 +7,7 @@
 
 body {
     height: 100vh;
+    width: 100%;
     font-family: var(--default-font);
     background-color: var(--default-background-color);
 }
