--- a/src/styles/cardspage.css
+++ b/src/styles/cardspage.css
@@ -124,7 +124,8 @@ body::before {
     display: grid;
 }
 
-.front-cards {
+.front-cards,
+.front-cards-shiny {
     background-color: var(--default-yellow);
     align-content: space-between;
     text-align: center;
@@ -150,11 +151,12 @@ body::before {
     border-radius: 0 0 10px 10px;
 }
 
-.typePokemon,
-.regionPokemon {
+.info {
     font-size: 15px;
     border-top: 2px solid var(--default-footer-font-color);
     padding: 3px;
+    white-space: pre-wrap;
+    word-break: break-word;
 }
 
 /* BOTÃO TOP */
@@ -172,7 +174,7 @@ body::before {
 }
 
 /* ESTILIZAÇÃO VERSÃO SHINY */
-/* .background-shiny::before {
+body.shiny::before {
     height: 100%;
     content: " ";
     background-image: url(../styles/img/background-shiny.jpg);
@@ -184,7 +186,8 @@ body::before {
     opacity: 0.9;
     position: fixed;
     z-index: -1;
-} */
+}
+
 .front-cards-shiny {
     background-color: #c79d33;
     align-content: space-between;
@@ -202,20 +205,24 @@ body::before {
         font-size: 15px;
         border-radius: 50px;
     }
+
     .form-search select,
     .form-search input,
     .form-search button {
         font-size: 15px;
         width: 110px;
     }
+
     .pokemonList {
         grid-template-columns: auto auto;
     }
+
     .button-top {
         right: 1.25rem;
         bottom: 1.25rem;
         margin-right: 1rem;
     }
+
     .button-top img {
         height: 3.5rem;
     }
@@ -227,10 +234,12 @@ body::before {
         display: flex;
         justify-content: space-evenly;
     }
+
     .calculation-print {
         font-size: 15px;
         top: 150px;
     }
+
     .pokemonList {
         top: 160px;
         grid-template-columns: auto auto auto auto;
